[package]
name = "stultusvisio"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "stultusvisio"
path = "src/main.rs"

[dependencies]
base64 = "0.13"

[package.metadata.docs.rs]
theme = "dark"
